--- a/dv_YAMLs/test-learning/test.yaml
+++ b/dv_YAMLs/test-learning/test.yaml
@@ -14,8 +14,8 @@ units:
 
   # outline dims
   outline_dim:                1.5U
-  brdOutlPad:                 0.5U
-  fillet_radius:              2
+  brdOutlPad:                 0.5u
+  fillet_radius:              2.5
 
 points:
   zones:
@@ -100,12 +100,12 @@ outlines:
   raw:
     - what:                   rectangle
       where:                  true
-      size:                   [pxy, pxy]
+      size:                   [u,u]
 
   keys:
     - what:                   rectangle
       where:                  true
-      size:                   [pxy-0.5, pxy-0.5]
+      size:                   [0.9u, 0.9u]
 
   board: 
       - what:                 polygon
@@ -124,14 +124,12 @@ outlines:
           # pinky top
           - ref:              alphanum_pinky_mod
             shift:            [-brdOutlPad, brdOutlPad]
-          - ref:              alphanum_pinky_mod
-            shift:            [brdOutlPad, brdOutlPad]
+          
 
           # ring top
           - ref:              alphanum_ring_mod
             shift:            [-brdOutlPad, brdOutlPad]
-          - ref:              alphanum_ring_mod
-            shift:            [brdOutlPad, brdOutlPad]
+          
 
           # middle top
           - ref:              alphanum_middle_mod
@@ -140,8 +138,8 @@ outlines:
             shift:            [brdOutlPad, brdOutlPad]
 
           # index top
-          - ref:              alphanum_index_mod
-            shift:            [-brdOutlPad, brdOutlPad]
+          # - ref:              alphanum_index_mod
+          #   shift:            [-brdOutlPad, brdOutlPad]
           
           # index stretch top
           - ref:              alphanum_index_stretch_mod
@@ -149,11 +147,11 @@ outlines:
 
           # mirror index stretch top
           - ref:              mirror_alphanum_index_stretch_mod
-            shift:            [-brdOutlPad, brdOutlPad] 
+            shift:            [brdOutlPad, brdOutlPad] 
 
           # mirror index top
-          - ref:              mirror_alphanum_index_mod
-            shift:            [brdOutlPad, brdOutlPad]
+          # - ref:              mirror_alphanum_index_mod
+          #   shift:            [brdOutlPad, brdOutlPad]
 
           # mirror middle top
           - ref:              mirror_alphanum_middle_mod
@@ -163,13 +161,13 @@ outlines:
 
           # mirror ring top
           - ref:              mirror_alphanum_ring_mod
-            shift:            [brdOutlPad, brdOutlPad] 
+            shift:            [-brdOutlPad, brdOutlPad] 
           - ref:              mirror_alphanum_ring_mod
             shift:            [-brdOutlPad, brdOutlPad]
 
           # mirror pinky top
-          - ref:              mirror_alphanum_pinky_mod
-            shift:            [brdOutlPad, brdOutlPad]
+          # - ref:              mirror_alphanum_pinky_mod
+          #   shift:            [brdOutlPad, brdOutlPad]
           - ref:              mirror_alphanum_pinky_mod
             shift:            [-brdOutlPad, brdOutlPad] 
 
@@ -250,6 +248,7 @@ outlines:
           - ref:              alphanum_ring_alpha1
             shift:            [-brdOutlPad, -brdOutlPad]
 
+
           # pinky bot
           - ref:              alphanum_pinky_alpha1
             shift:            [brdOutlPad, -brdOutlPad] 
@@ -259,14 +258,18 @@ outlines:
           # numpad bot right corner
           - ref:              numpad_C3_R1
             shift:            [brdOutlPad, -brdOutlPad]  
-            
-        fillet:               fillet_radius        
+        fillet:               fillet_radius     
+
   # Combination preview showing outline and keys.
-  # combo:
-  #   - name:                   board
-  #   - operation:              subtract
-  #     name:                   keys
+  combo:
+    - name:                   board
+    - operation:              subtract
+      name:                   keys
 
 
 pcbs:
+  test:
+    outlines:
+      main:
+        outline: board
 cases:
